# f1tenth_ajou

install/: local_setup.sh  setup.sh
log/: latest_build  latest_list
maps/: fake_hwless_map_20260225_164522.pbstream  fake_hwless_map_20260225_164522.yaml  fake_hwless_map_20260225_164542.pbstream  fake_hwless_map_20260225_164542.yaml  sim_map_20260304_180203.pbstream  sim_map_20260304_180223.pbstream  sim_map_20260304_180243.pbstream  sim_map_20260304_180303.pbstream  sim_map_20260304_180323.pbstream  sim_map_20260304_180343.pbstream  sim_map_20260304_180403.pbstream  sim_map_20260304_180423.pbstream  sim_map_20260304_180443.pbstream  (+3 more)
src/localization_layer/: CMakeLists.txt  package.xml
src/localization_layer/config/: cartographer_2d_localization.lua  cartographer_2d_mapping.lua  cartographer_2d_mapping_lidar_only.lua  map_builder_mapping.lua  pose_graph.lua  pose_graph_mapping.lua
src/localization_layer/launch/: cartographer_fake_localization_launch.py  cartographer_fake_mapping_launch.py  cartographer_localization_launch.py  cartographer_mapping_launch.py
src/localization_layer/scripts/: fake_sensor_publisher.py  map_auto_saver.py
src/race_layer/: CMakeLists.txt  package.xml
src/race_layer/launch/: FGM_node.py  centerline.py  make_csv.py  race_layer.launch.py
src/race_pkg/: pakage.xml  (+3 more)
src/sim_test/: CMakeLists.txt  README.md
src/sim_test/config/: sim_sensor_params.yaml  sim_sensor_params_localization.yaml  sim_sensor_params_mapping.yaml
src/sim_test/launch/: sim_localization.launch.py  sim_mapping.launch.py
src/sim_test/scripts/: sim_fake_sensor_publisher.py
(+92 files in other folders)
